--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ a:hover {
 }
 
 p {
+    margin: 20px;
     line-height: 2;
 }
 
@@ -136,13 +137,13 @@ hr {
 .education-row {
     /*display: inline-block;*/
     width: 60%;
-    margin: 40px auto 70px auto;
+    margin: 40px auto 90px auto;
     text-align: left;
     line-height: 2;
 }
 
 .msc-image {
-    width: 25%;
+    width: 20%;
     max-width: fit-content;
     float: left;
     border-radius: 30px;
@@ -154,7 +155,7 @@ hr {
 }
 
 .bsc-img {
-    width: 25%;
+    width: 20%;
     max-width: fit-content;
     float: right;
     margin-left: 30px;
@@ -169,11 +170,11 @@ hr {
 }
 
 .skills-icon {
-    width: 25%;
-    max-width: fit-content;
+    width: 20%;
+    max-width: fit-content (130em);
     float: left;
     border-radius: 30px;
-    margin: auto 20px 30px auto;
+    margin: auto 20px 50px auto;
 }
 
 .left-tree {
